[package]
name = "hopper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-watch = "8.5.2"
clap = { version = "4.5.0", features = ["derive"] }
clearscreen = "2.0.1"
reqwest = { version = "0.11.24", features = ["blocking"] }
scraper = "0.18.1"
url = "2.5.0"
